name:                Problem9
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  hs-Source-Dirs:      ./
  other-modules:       Problem9, Bird.Parser
  build-depends:       HUnit, base, containers, mtl, silently
   -- ghc-options:         -dynamic
  default-language:    Haskell2010
